# HosteyPic

./: .gitignore  LICENSE  README.md  Technical_specifications_HosteyPic.doc  docker-compose-dev.yml  docker-compose.yml  nginx-dev.conf  nginx.conf  package-lock.json
server/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server/hosteypic_server/: config.py  database.py  email.py  exceptions.py  image.py  main.py  mixins.py  storage.py  tools.py
server/hosteypic_server/auth/: config.py  manager.py  router.py  schemas.py  tools.py
server/hosteypic_server/dataset/: router.py  tools.py
server/hosteypic_server/likes/: models.py  router.py  tools.py
server/hosteypic_server/posts/: models.py  router.py  schemas.py  tools.py
server/hosteypic_server/reports/: models.py  router.py  schemas.py
server/hosteypic_server/tags/: models.py  router.py  schemas.py
server/hosteypic_server/test/: router.py  schemas.py
server/hosteypic_server/tools/: exceptions.py  mixins.py
server/hosteypic_server/users/: dao.py  models.py  router.py  schemas.py  tools.py
server/migrations/: README.md  env.py
server/migrations/versions/: 1048da499a7e_likes_association_added.py  171310771d8d_username_size_extended.py  1993cdefca00_posts_timestamp_fix.py  1a7eac2fec99_posts_table_add.py  28cb265348b7_followers_add.py  2a68bc18b376_likes_added.py  4dff70d7c610_tags_added.py  6717acad90af_make_tags_unique.py  7e2f3d27db8f_add_fts_on_posts.py  9be7de7ff3a9_users_table_add.py  a5bb3bbdc640_tags_added.py  af49ab4c124b_posts_table_added.py  bc0159da37e8_add_users_allowlist.py  (+4 more)
(+57 files in other folders)
