[tool.poetry]
name = "hosteypic-server"
version = "0.1.0"
description = ""
authors = ["Forkenn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
alembic = "^1.13.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
